# cmb-likelihood

./: README.md  README.rst  example.yaml  pyproject.toml  requirements.txt  run_code.ipynb  setup.py  testing.py
cmblike/: cmb.py  data.py  likelihood.py  noise.py  utils.py
data/: wmap_binned.txt
tools/: cmb.py  noise.py
