[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmblike"
version = "0.1.0.beta"
description = ""
authors = [{name="Harry Bevins", email="htjb2@cam.ac.uk"}]
readme = "README.rst"
dependencies = ["numpy", "scipy", "pypolychord", "camb"]

[project.urls]
repository = "https://github.com/htjb/cmb_likelihood"

[tool.setuptools]
py-modules = ['cmblike']